overflow bug 2

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,7 +4,7 @@
 html, body, #home{
 	height: 100%;
 	overflow-x: hidden;
-	
+
 }
 
 
@@ -18,8 +18,8 @@ body{
 
 nav.navbar-transparente{
 	padding: 15px 0px;
-	margin-right: 17px; 
 	background: rgba(0,0,0,0.6)
+
 }
 
 .navbar-dark .navbar-nav .nav-link{
